change link urls

--- a/index.html
+++ b/index.html
@@ -227,7 +227,11 @@
                   collaborative developer environments in your browser - powered
                   by VS Code.
                 </div>
-                <a href="#" class="link">
+                <a
+                  href="https://rasool404.github.io/gitpad/"
+                  target="_blank"
+                  class="link"
+                >
                   <span class="mask">
                     <div class="link-container">
                       <span class="link-title1 title-link">Visit</span>
@@ -286,7 +290,11 @@
                   Online store written in react and node js. <br />
                   Multifunctional and easy to use
                 </div>
-                <a href="#" class="link">
+                <a
+                  href="https://keen-jennings-8f6f41.netlify.app/"
+                  target="_blank"
+                  class="link"
+                >
                   <span class="mask">
                     <div class="link-container">
                       <span class="link-title1 title-link">Visit</span>
@@ -350,7 +358,6 @@
                   type="text"
                   name="Name"
                   data-value="Name*"
-                  data-error="Ошибка"
                   class="input req"
                 />
               </div>
@@ -373,20 +380,26 @@
               <h5>Feeling social? Find me on these online spaces too!</h5>
               <div class="social">
                 <p>
-                  <a href=""><i class="fab fa-github"></i></a>
+                  <a href="https://github.com/rasool404" target="_blank"
+                    ><i class="fab fa-github"></i
+                  ></a>
                 </p>
                 <p>
-                  <a href=""><i class="fab fa-codepen"></i></a>
+                  <a href="https://codepen.io/rasool404" target="_blank"
+                    ><i class="fab fa-codepen"></i
+                  ></a>
                 </p>
               </div>
               <div class="contacts">
                 <p>
                   <i class="fas fa-envelope"></i>
-                  <a href="">rasuljonhalimov47@gmail.com</a>
+                  <a href="mailto:rasuljonhalimov47@gmail.com" target="_blank"
+                    >rasuljonhalimov47@gmail.com</a
+                  >
                 </p>
                 <p>
                   <i class="fab fa-telegram"></i>
-                  <a href="">Telegram</a>
+                  <a href="https://t.me/rasool404" target="_blank">Telegram</a>
                 </p>
               </div>
             </div>
