add russian lang

--- a/index.html
+++ b/index.html
@@ -46,19 +46,45 @@
           <nav class="menu__body">
             <ul class="menu__list">
               <li>
-                <a href="#header__body" class="menu__link goto">Home</a>
+                <a
+                  href="#header__body"
+                  class="menu__link goto lng-header-home"
+                ></a>
               </li>
               <li>
-                <a href="#about" class="menu__link goto">Skills & Tools</a>
+                <a href="#about" class="menu__link goto lng-header-skills"></a>
               </li>
               <li>
-                <a href="#about__info" class="menu__link goto">About me</a>
+                <a
+                  href="#about__info"
+                  class="menu__link goto lng-header-about"
+                ></a>
               </li>
               <li>
-                <a href="#portfolio" class="menu__link goto">Works</a>
+                <a
+                  href="#portfolio"
+                  class="menu__link goto lng-header-works"
+                ></a>
               </li>
               <li>
-                <a href="#contact" class="menu__link goto">Contact</a>
+                <a
+                  href="#contact"
+                  class="menu__link goto lng-header-contact"
+                ></a>
+              </li>
+              <li>
+                <label class="select" for="lang">
+                  <select id="lang">
+                    <option value="en" selected>En</option>
+                    <option value="ru">Ru</option>
+                  </select>
+                  <svg>
+                    <use xlink:href="#select-arrow-down"></use></svg></label
+                ><svg class="sprites">
+                  <symbol id="select-arrow-down" viewbox="0 0 10 6">
+                    <polyline points="1 1 5 5 9 1"></polyline>
+                  </symbol>
+                </svg>
               </li>
             </ul>
           </nav>
@@ -72,15 +98,12 @@
     </div>
     <div class="header__body">
       <div class="header__greeting">
-        <h2>HI THERE 👋</h2>
-        <h1>I’m <span id="name"></span></h1>
-        <h4>Front-End Developer</h4>
-        <p>
-          I've been doing front-end development for a year now. Do you need a
-          site layout, or maybe a turnkey website? Then contact me
-        </p>
+        <h2 class="lng-header-greeting-title"></h2>
+        <h1 class="lng-header-greeting-name"></h1>
+        <h4 class="lng-header-profession"></h4>
+        <p class="lng-header-descr"></p>
 
-        <a href="#contact" class="header__btn goto"> Hire Me ! </a>
+        <a href="#contact" class="header__btn goto lng-header-btn"></a>
       </div>
     </div>
   </div>
@@ -88,11 +111,8 @@
 <div id="particles"></div>
       <div class="about">
         <div class="container">
-          <h2 class="title">SKILLS & TOOLS</h2>
-          <h3 class="sub-title">
-            The skills, tools and technologies I use to bring your products to
-            life:
-          </h3>
+          <h2 class="title lng-skills-title"></h2>
+          <h3 class="sub-title lng-skills-descr"></h3>
           <div class="about__skills skills">
             <div class="skills__block">
               <div class="skills__logo">
@@ -168,50 +188,26 @@
             </div>
           </div>
           <div class="currently">
-            <div class="sub-title">Currently working on:</div>
-            <p>
-              Improving my skills in, and understanding of vanilla JavaScript
-              and React.
-            </p>
+            <div class="sub-title lng-currently-title"></div>
+            <p class="lng-currently-descr"></p>
           </div>
           <div class="about__info">
             <div class="container">
-              <h2 class="about__info-title">About me</h2>
-              <p class="about__info-text">
-                <span>A curiosity-driven Front-End Developer</span>
-                I'm passionate about bringing both the technical and visual
-                aspects of digital products to life. User experience, beautiful
-                pixels and writing clean accessible, human code matters to me. I
-                sweat the details. <br />
-                <br />
-                I'm happiest when I'm creating, learning, exploring and thinking
-                about how to make things better. <br />
-                <br />
-                Why programming? Everything is elementary - I love it, the
-                profession of the future, thanks to which I can provide myself
-                and fulfill my dream - travel, at the moment I specialize in
-                front-end and back-end development. Why should you choose me? I
-                approach each order with great responsibility and love, as I
-                want to make a name for myself, exclude plagiarism and
-                negligence, fully study the project, the client and its target
-                audience, work for quality, trying to make an order as quickly
-                and uniquely as possible, taking into account all the edits and
-                wishes. By trusting me, you will get the maximum return for your
-                project, save your nerves and time.
-              </p>
+              <h2 class="about__info-title lng-about-title"></h2>
+              <p class="about__info-text lng-about-text"></p>
             </div>
           </div>
         </div>
       </div>
       <div class="portfolio">
         <div class="container">
-          <h2 class="title">Works</h2>
-          <h3 class="sub-title">A Selection Of Stuff I've Built</h3>
+          <h2 class="title lng-works-title"></h2>
+          <h3 class="sub-title lng-works-descr"></h3>
           <div class="portfolio__slider">
             <div class="portfolio__slide">
               <img src="img/projects/01.png" alt="" />
               <div class="portfolio__slide-content">
-                <div class="portfolio__slide-content-title">Gitpod</div>
+                <p class="portfolio__slide-content-title lng-work-1-title"></p>
                 <div class="portfolio__slide-content-technologies">
                   <p>
                     <i class="devicon-html5-plain colored"></i>
@@ -222,11 +218,7 @@
                   <p><i class="devicon-javascript-plain colored"></i></p>
                   <p><i class="devicon-sass-plain colored"></i></p>
                 </div>
-                <div class="portfolio__slide-content-text">
-                  Gitpod streamlines developer workflows by providing prebuilt,
-                  collaborative developer environments in your browser - powered
-                  by VS Code.
-                </div>
+                <p class="portfolio__slide-content-text lng-work-1-descr"></p>
                 <a
                   href="https://rasool404.github.io/gitpad/"
                   target="_blank"
@@ -234,8 +226,12 @@
                 >
                   <span class="mask">
                     <div class="link-container">
-                      <span class="link-title1 title-link">Visit</span>
-                      <span class="link-title2 title-link">View It</span>
+                      <span
+                        class="link-title1 title-link lng-work-1-btn-text1"
+                      ></span>
+                      <span
+                        class="link-title2 title-link lng-work-1-btn-text2"
+                      ></span>
                     </div>
                   </span>
                   <div class="link-icon">
@@ -270,9 +266,7 @@
             <div class="portfolio__slide">
               <img src="img/projects/02.png" alt="" />
               <div class="portfolio__slide-content">
-                <div class="portfolio__slide-content-title">
-                  Online Store React
-                </div>
+                <p class="portfolio__slide-content-title lng-work-2-title"></p>
                 <div class="portfolio__slide-content-technologies">
                   <p>
                     <i class="devicon-html5-plain colored"></i>
@@ -285,11 +279,8 @@
                   <p><i class="devicon-nodejs-plain colored"></i></p>
                   <p><i class="devicon-sass-plain colored"></i></p>
                 </div>
-                <div class="portfolio__slide-content-text">
-                  The best online store in the world. <br />
-                  Online store written in react and node js. <br />
-                  Multifunctional and easy to use
-                </div>
+                <p class="portfolio__slide-content-text lng-work-2-descr"></p>
+
                 <a
                   href="https://keen-jennings-8f6f41.netlify.app/"
                   target="_blank"
@@ -297,8 +288,12 @@
                 >
                   <span class="mask">
                     <div class="link-container">
-                      <span class="link-title1 title-link">Visit</span>
-                      <span class="link-title2 title-link">View It</span>
+                      <span
+                        class="link-title1 title-link lng-work-2-btn-text1"
+                      ></span>
+                      <span
+                        class="link-title2 title-link lng-work-2-btn-text2"
+                      ></span>
                     </div>
                   </span>
                   <div class="link-icon">
@@ -336,31 +331,24 @@
       </div>
       <div class="contact">
         <div class="container">
-          <div class="title">Contact</div>
-          <div class="sub-title">Get In Touch</div>
-          <p class="contact__descr">
-            I am available to work on your projects and bring your ideas to
-            life. I am just a click away.
-          </p>
+          <div class="title lng-contact-title"></div>
+          <div class="sub-title lng-contact-descr"></div>
+          <p class="contact__descr lng-contact-text"></p>
           <div class="contact__block">
             <form
               action="https://formspree.io/f/mjvlvvpa"
               method="post"
               class="contact__form"
             >
-              <p>
-                Fill in your info in the form below and I look forward to
-                hearing from you!
-              </p>
-              <div>
-                <input
-                  autocomplete="off"
-                  type="text"
-                  name="Name"
-                  data-value="Name*"
-                  class="input req"
-                />
-              </div>
+              <p class="lng-contact-form-text"></p>
+
+              <input
+                autocomplete="off"
+                type="text"
+                name="Name"
+                data-value="Name*"
+                class="input req"
+              />
               <input
                 autocomplete="off"
                 type="text"
@@ -374,10 +362,13 @@
                 data-value="Message*"
                 rows="5"
               ></textarea>
-              <button type="submit" class="button">Send Email</button>
+              <button
+                type="submit"
+                class="button lng-contact-form-btn"
+              ></button>
             </form>
             <div class="contact__social">
-              <h5>Feeling social? Find me on these online spaces too!</h5>
+              <h5 class="lng-contact-social"></h5>
               <div class="social">
                 <p>
                   <a href="https://github.com/rasool404" target="_blank"
@@ -409,9 +400,9 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__row">
-      <p>&copy; Copyright 2021. All right reserved</p>
+      <p class="lng-footer-copyright"></p>
       <div class="footer__contact">
-        <p>Contact:</p>
+        <p class="lng-footer-contact"></p>
         <p>
           Email:
           <a href="mailto:rasuljonhalimov47@gmail.com" target="_blank"
@@ -446,6 +437,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
 <script src="js/particles.min.js"></script>
+<script src="js/lang.js"></script>
 <script src="js/main.js"></script>
   </body>
 </html>
