--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <body class="lock">
     <div class="wrapper">
 <header class="header">
+  <div id="particles"></div>
   <div class="container">
     <div class="header__row" id="header">
       <div class="container">
@@ -49,27 +50,43 @@
                 <a
                   href="#header__body"
                   class="menu__link goto lng-header-home"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
                 ></a>
               </li>
               <li>
-                <a href="#skills" class="menu__link goto lng-header-skills"></a>
+                <a
+                  href="#skills"
+                  class="menu__link goto lng-header-skills"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                ></a>
               </li>
               <li>
-                <a href="#about" class="menu__link goto lng-header-about"></a>
+                <a
+                  href="#about"
+                  class="menu__link goto lng-header-about"
+                  data-aos="fade-up"
+                  data-aos-delay="300"
+                ></a>
               </li>
               <li>
                 <a
                   href="#portfolio"
                   class="menu__link goto lng-header-works"
+                  data-aos="fade-up"
+                  data-aos-delay="400"
                 ></a>
               </li>
               <li>
                 <a
                   href="#contact"
                   class="menu__link goto lng-header-contact"
+                  data-aos="fade-up"
+                  data-aos-delay="500"
                 ></a>
               </li>
-              <li>
+              <li data-aos="fade-up" data-aos-delay="600">
                 <div class="select">
                   <select>
                     <option value="en" selected>English</option>
@@ -82,13 +99,16 @@
         </div>
       </div>
     </div>
-    <div class="icon-menu">
-      <span></span>
-      <span></span>
-      <span></span>
+    <div class="burger">
+      <div class="icon-menu" data-aos="fade-up">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
+
     <section class="header__body">
-      <div class="header__greeting">
+      <div class="header__greeting" data-aos="fade-up" data-aos-delay="800">
         <h2 class="lng-header-greeting-title"></h2>
         <h1 class="lng-header-greeting-name"></h1>
         <h4 class="lng-header-profession"></h4>
@@ -99,80 +119,82 @@
     </section>
   </div>
 </header>
-<div id="particles"></div>
 
       <section class="skills">
         <div class="container">
-          <h2 class="title lng-skills-title"></h2>
-          <h3 class="sub-title lng-skills-descr"></h3>
+          <h2 class="title lng-skills-title" data-aos="fade-down-right"></h2>
+          <h3
+            class="sub-title lng-skills-descr"
+            data-aos="fade-down-right"
+          ></h3>
           <div class="skills__row">
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-html5-plain"></i>
               </div>
               <p class="skills__title">HTML5</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-css3-plain"></i>
               </div>
               <p class="skills__title">CSS3</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-javascript-plain"></i>
               </div>
               <p class="skills__title">JavaScript</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-jquery-plain"></i>
               </div>
               <p class="skills__title">jQuery</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-react-original"></i>
               </div>
               <p class="skills__title">React</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-git-plain"></i>
               </div>
               <p class="skills__title">Git</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-github-original"></i>
               </div>
               <p class="skills__title">Github</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-firebase-plain"></i>
               </div>
               <p class="skills__title">Firebase</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-nodejs-plain"></i>
               </div>
               <p class="skills__title">NodeJS</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-sass-plain"></i>
               </div>
               <p class="skills__title">Sass</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-bootstrap-plain"></i>
               </div>
               <p class="skills__title">Bootstrap</p>
             </div>
-            <div class="skills__block">
+            <div class="skills__block" data-aos="zoom-in">
               <div class="skills__logo">
                 <i class="devicon-wordpress-plain"></i>
               </div>
@@ -180,8 +202,15 @@
             </div>
           </div>
           <div class="currently">
-            <div class="sub-title lng-currently-title"></div>
-            <p class="lng-currently-descr"></p>
+            <div
+              class="sub-title lng-currently-title"
+              data-aos="fade-up-right"
+            ></div>
+            <p
+              class="lng-currently-descr"
+              data-aos="fade-up-right"
+              data-aos-delay="200"
+            ></p>
           </div>
         </div>
       </section>
@@ -189,16 +218,16 @@
       <section class="about">
         <div class="container">
           <div class="about__block">
-            <h2 class="about__title lng-about-title"></h2>
-            <p class="about__text lng-about-text"></p>
+            <h2 class="about__title lng-about-title" data-aos="fade-down"></h2>
+            <p class="about__text lng-about-text" data-aos="fade-up"></p>
           </div>
         </div>
       </section>
       <section class="portfolio">
         <div class="container">
-          <h2 class="title lng-works-title"></h2>
-          <h3 class="sub-title lng-works-descr"></h3>
-          <div class="portfolio__slider">
+          <h2 class="title lng-works-title" data-aos="fade-down-right"></h2>
+          <h3 class="sub-title lng-works-descr" data-aos="fade-down-right"></h3>
+          <div class="portfolio__slider" data-aos="fade-up">
             <div class="portfolio__slide">
               <img src="img/projects/01.png" alt="" />
               <div class="portfolio__slide-content">
@@ -221,12 +250,8 @@
                 >
                   <span class="mask">
                     <div class="link-container">
-                      <span
-                        class="link-title1 title-link lng-work-1-btn-text1"
-                      ></span>
-                      <span
-                        class="link-title2 title-link lng-work-1-btn-text2"
-                      ></span>
+                      <span class="link-title1 title-link"></span>
+                      <span class="link-title2 title-link"></span>
                     </div>
                   </span>
                   <div class="link-icon">
@@ -283,12 +308,8 @@
                 >
                   <span class="mask">
                     <div class="link-container">
-                      <span
-                        class="link-title1 title-link lng-work-2-btn-text1"
-                      ></span>
-                      <span
-                        class="link-title2 title-link lng-work-2-btn-text2"
-                      ></span>
+                      <span class="link-title1 title-link"></span>
+                      <span class="link-title2 title-link"></span>
                     </div>
                   </span>
                   <div class="link-icon">
@@ -326,10 +347,13 @@
       </section>
       <section class="contact">
         <div class="container">
-          <div class="title lng-contact-title"></div>
-          <div class="sub-title lng-contact-descr"></div>
-          <p class="contact__descr lng-contact-text"></p>
-          <div class="contact__block">
+          <div class="title lng-contact-title" data-aos="fade-down-right"></div>
+          <div
+            class="sub-title lng-contact-descr"
+            data-aos="fade-down-right"
+          ></div>
+          <p class="contact__descr lng-contact-text" data-aos="fade-up"></p>
+          <div class="contact__block" data-aos="fade-up">
             <form
               action="https://formspree.io/f/mjvlvvpa"
               method="post"
@@ -410,7 +434,7 @@
           <a href="https://t.me/rasool404/" target="_blank">Telegram</a>
         </p>
       </div>
-      <a href="#header__body" class="footer__button goto">
+      <a href="#header__body" class="footer__button goto" data-aos-delay="300">
         <img src="img/arrow-top.svg" alt="" />
       </a>
     </div>
