--- a/index.html
+++ b/index.html
@@ -341,6 +341,116 @@
                 </a>
               </div>
             </div>
+            <div class="portfolio__slide">
+              <img src="img/projects/03.png" alt="" />
+              <div class="portfolio__slide-content">
+                <p class="portfolio__slide-content-title lng-work-3-title"></p>
+                <div class="portfolio__slide-content-technologies">
+                  <p>
+                    <i class="devicon-html5-plain colored"></i>
+                  </p>
+                  <p>
+                    <i class="devicon-css3-plain colored"></i>
+                  </p>
+                  <p><i class="devicon-javascript-plain colored"></i></p>
+                  <p><i class="devicon-sass-plain colored"></i></p>
+                </div>
+                <p class="portfolio__slide-content-text lng-work-3-descr"></p>
+                <a
+                  href="https://rasool404.github.io/gitpad/"
+                  target="_blank"
+                  class="link"
+                >
+                  <span class="mask">
+                    <div class="link-container">
+                      <span class="link-title1 title-link"></span>
+                      <span class="link-title2 title-link"></span>
+                    </div>
+                  </span>
+                  <div class="link-icon">
+                    <svg
+                      class="icon"
+                      width="24"
+                      height="24"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                    >
+                      <path
+                        d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z"
+                      />
+                    </svg>
+                    <svg
+                      class="icon"
+                      width="24"
+                      height="24"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                    >
+                      <path
+                        d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z"
+                      />
+                    </svg>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="portfolio__slide">
+              <img src="img/projects/04.png" alt="" />
+              <div class="portfolio__slide-content">
+                <p class="portfolio__slide-content-title lng-work-4-title"></p>
+                <div class="portfolio__slide-content-technologies">
+                  <p>
+                    <i class="devicon-html5-plain colored"></i>
+                  </p>
+                  <p>
+                    <i class="devicon-css3-plain colored"></i>
+                  </p>
+                  <p><i class="devicon-javascript-plain colored"></i></p>
+                  <p><i class="devicon-sass-plain colored"></i></p>
+                </div>
+                <p class="portfolio__slide-content-text lng-work-4-descr"></p>
+                <a
+                  href="https://rasool404.github.io/gitpad/"
+                  target="_blank"
+                  class="link"
+                >
+                  <span class="mask">
+                    <div class="link-container">
+                      <span class="link-title1 title-link"></span>
+                      <span class="link-title2 title-link"></span>
+                    </div>
+                  </span>
+                  <div class="link-icon">
+                    <svg
+                      class="icon"
+                      width="24"
+                      height="24"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                    >
+                      <path
+                        d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z"
+                      />
+                    </svg>
+                    <svg
+                      class="icon"
+                      width="24"
+                      height="24"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                    >
+                      <path
+                        d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z"
+                      />
+                    </svg>
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
           <div class="slider__dots"></div>
         </div>
